<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="com.forcemanage.inspect.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:background="@drawable/image_border"
            android:layout_weight="0.25"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="TABLET" />

                <TextView
                    android:id="@+id/inspectorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Author"
                         />

                <Spinner
                    android:id="@+id/spinnerInspectorID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top"
                android:layout_weight="0.5"
                android:orientation="horizontal">


                <fragment
                    android:id="@+id/tree_fragment"
                    android:name="com.forcemanage.inspect.MapViewFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <fragment
                    android:id="@+id/detail_text"
                    android:name="com.forcemanage.inspect.DetailFragment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />


            </LinearLayout>





            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/btnloadJobs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/tertiary_text_light"
                    android:drawableLeft="@android:drawable/ic_menu_view"
                    android:text="SHOW DOWNLOADED JOBS "
                    android:textSize="14sp"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnDownloadJobs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#092877"
                    android:drawableStart="@android:drawable/arrow_down_float"
                    android:text="@string/download_jobs"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnDownloadPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#092877"
                    android:drawableStart="@android:drawable/arrow_down_float"
                    android:text="@string/download_photos"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnDownload_O_R"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#092877"
                    android:drawableStart="@android:drawable/arrow_down_float"
                    android:text="@string/download_comments"
                    android:textColor="@android:color/white" />


                <Button
                    android:id="@+id/btnSyncPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:backgroundTint="#092877"
                    android:drawableStart="@android:drawable/ic_menu_upload"
                    android:text="@string/upload_photos"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnSyncAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#092877"
                    android:drawableStart="@android:drawable/ic_menu_upload_you_tube"
                    android:text="@string/upload_data"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="?android:progressBarStyleHorizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:progress="100"
                        android:progressDrawable="@drawable/circle" />

                    <Button
                        android:id="@+id/btnClearData"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/holo_orange_dark"
                        android:enabled="false"
                        android:text="@string/clear_tablet_data"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout

            android:id="@+id/mainfragment_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:paddingLeft="6dp"
            android:orientation="vertical">


        </LinearLayout>




        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <ImageView
                    android:id="@+id/imageView_cam"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|left"
                    android:layout_marginTop="10dp"
                    android:saveEnabled="false"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

                <ImageView
                    android:id="@+id/imageView_info"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginTop="10dp"
                    android:saveEnabled="false"
                    app:srcCompat="@android:drawable/ic_menu_info_details" />
                </FrameLayout>

            </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:baselineAlignBottom="true"
                            android:cropToPadding="false"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/image_border"
                            android:padding="3dp"
                            app:srcCompat="@drawable/ic_camera"
                            ></ImageView>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>